peer feedback modifications

--- a/reports/paper/main.tex
+++ b/reports/paper/main.tex
@@ -81,6 +81,7 @@ The inferred epidemic trajectories contain the information about the total numbe
     \includegraphics[width=0.8\textwidth]{201030_europe3_figtraj01.png}
     \caption{Inferred population size summary statistics for each deme over time. The line represents the median population trajectory and the interval is the 95\%  credible interval in log scale from a random subsampled set of inferred epidemic trajectories.}
     \label{fig:gribbon}
+    \todo[inline]{Specify that the random subset are 500 trajectories in all figure legends}
 \end{figure}
 
 
@@ -129,7 +130,7 @@ We can analyze if this order of countries, defined by the time in which the firs
 \begin{figure}[ht]
     \centering
     \includegraphics[width=\textwidth]{201030_europe3_figtraj05.png}
-    \caption{Order of countries by the time of its first introduction, i.e. first case in the country. Each row is the order for one of the subsampled epidemic trajectories and each column represents the position relative to the other countries first introduction, e.g. in first position for all epidemic trajectories is China since it is the origin of the epidemic.} 
+    \caption{Countries ordered by the time of its first introduction, i.e. first case in the country. Each row is the order for one of the subsampled epidemic trajectories and each column represents the position relative to the other countries first introduction, e.g. in first position for all epidemic trajectories is China since it is the origin of the epidemic.} 
     \label{fig:first_imig}
 \end{figure}
 
